@@ -1,5 +1,10 @@
 2003-09-21  John Levon  <levon@movementarian.org>
 
+	* pp/opreport_options.cpp: prevent --global-percent
+	when appropriate
+
+2003-09-21  John Levon  <levon@movementarian.org>
+
 	* Makefile.am: back out broken make clean change
 
 2003-09-21  John Levon  <levon@movementarian.org>
